# my-nl2sql

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_admin_extension.py  003_rag_eval.py
apps/admin/: package.json
apps/admin/app/: globals.css  layout.tsx
apps/admin/components/: AdminErrorBanner.tsx  AdminModal.tsx  ChunkMultiSelect.tsx  SyncTablesModal.tsx  (+2 more)
apps/web/: package.json
backend/: config.py
backend/api/: admin_graphql.py  main.py  schema.py  session_manager.py  sse.py
backend/cache/: llm_cache.py
backend/db/: __init__.py  models.py  prompts.py  session.py  system_config.py
backend/eval/: rag_benchmark.json  rag_eval.py
backend/graph/: workflow.py
backend/llm/: client.py  service.py
backend/rag/: index_ops.py  indexer.py  retriever.py
backend/scripts/: eval_rag.py  seed.py  upgrade_prompts.py
backend/services/: metadata_sync.py  schema_introspector.py  template_recommender.py
backend/sql/: connection.py  schema.py
backend/tests/: conftest.py  test_api_graphql.py  test_api_health.py  test_api_sse.py  test_cache.py  test_index_ops.py  test_metadata_sync.py  test_prompt_constraints.py  test_rag_eval.py  test_schema_introspector.py  test_session_manager.py  test_sql_schema.py  test_system_config.py  test_template_recommender.py  test_workflow_graph.py
backend/workers/: tasks.py
doc/: README.md
doc/plan/: NL2SQL 系统设计.md  管理后台数据管理扩展.md
doc/startup/: 项目启动.md
doc/structure/: 项目结构.md
(+20 files in other folders)
